k8s_yaml/mongodb-ui/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    field.cattle.io/publicEndpoints: '[{"addresses":["10.24.22.162","10.24.22.163"],"port":80,"protocol":"HTTP","serviceName":"database:mongodb-express-service","ingressName":"database:mongodb-ingress","hostname":"mongodb-ui-dev.mykiot.vn","path":"/","allNodes":false}]'
  labels:
    app: mongodb-express
  name: mongodb-express-deployment
  namespace: database
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongodb-express
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-05-11T15:17:59+07:00"
      creationTimestamp: null
      labels:
        app: mongodb-express
    spec:
      containers:
      - env:
        - name: ME_CONFIG_MONGODB_ADMINUSERNAME
          valueFrom:
            secretKeyRef:
              key: mongo-root-username
              name: mongoex-secret
        - name: ME_CONFIG_MONGODB_ADMINPASSWORD
          valueFrom:
            secretKeyRef:
              key: mongo-root-password
              name: mongoex-secret
        - name: ME_CONFIG_MONGODB_SERVER
          valueFrom:
            configMapKeyRef:
              key: database_url
              name: mongoex-configmap
        - name: ME_CONFIG_MONGODB_ENABLE_ADMIN
          valueFrom:
            configMapKeyRef:
              key: ME_CONFIG_MONGODB_ENABLE_ADMIN
              name: mongoex-configmap
        - name: ME_CONFIG_BASICAUTH_USERNAME
          valueFrom:
            configMapKeyRef:
              key: ME_CONFIG_BASICAUTH_USERNAME
              name: mongoex-configmap
        - name: ME_CONFIG_BASICAUTH_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: ME_CONFIG_BASICAUTH_PASSWORD
              name: mongoex-configmap
        - name: ME_CONFIG_OPTIONS_EDITORTHEME
          valueFrom:
            configMapKeyRef:
              key: ME_CONFIG_OPTIONS_EDITORTHEME
              name: mongoex-configmap
        image: mongo-express
        imagePullPolicy: Always
        name: mongodb-express
        ports:
        - containerPort: 8081
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30


--- # configmap
apiVersion: v1
data:
  ME_CONFIG_BASICAUTH_PASSWORD: dev#OMykRt12
  ME_CONFIG_BASICAUTH_USERNAME: devmykiot
  ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
  ME_CONFIG_OPTIONS_EDITORTHEME: ayu-dark
  database_url: 10.24.22.174
kind: ConfigMap
metadata:
  name: mongoex-configmap
  namespace: database


--- # svc
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: database
spec:
  clusterIP: 10.48.7.131
  clusterIPs:
  - 10.48.7.131
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 4000
    targetPort: 8081
  selector:
    app: mongodb-express

--- # ingress    
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["10.24.22.162","10.24.22.163"],"port":80,"protocol":"HTTP","serviceName":"database:mongodb-express-service","ingressName":"database:mongodb-ingress","hostname":"mongodb-ui-dev.mykiot.vn","path":"/","allNodes":false}]'
  name: mongodb-ingress
  namespace: database
spec:
  ingressClassName: nginx
  rules:
  - host: mongodb-ui-dev.mykiot.vn
    http:
      paths:
      - backend:
          service:
            name: mongodb-express-service
            port:
              number: 4000
        path: /
        pathType: Prefix
